--- a/view/upload-images/partial/upload_image.phtml
+++ b/view/upload-images/partial/upload_image.phtml
@@ -1,23 +1,23 @@
 <!-- Image upload -->
 <hr/>
 <h2>Afbeelden toevoegen</h2>
-<div class="form-group">
+<div class="form-group <?php echo (count($formImage->getMessages('image')) > 0 ? 'has-error' : '' ) ?> row">
     <?php echo $this->formLabel($formImage->get('image')); ?>
     <div class="col-sm-4 col-md-4 col-lg-4">
+        
         <div class="has-feedback">
             <div class="input-group">
                 <label class="input-group-addon btn btn-file">
                     Browse&hellip; <input type="file" name="image" style="display: none;" multiple>
                 </label>
-                <input type="text" class="form-control" name="blogImageFileName" readonly>
+                <input type="text" class="form-control" name="fileUploadFileName" readonly>
             </div>
         </div>
     </div>
-    <div class="col-sm-4 col-md-4 col-lg-4">
-        <?php echo (count($formImage->getMessages('image')) > 0 ? $formImage->getMessages('image')['isEmpty'] : '&nbsp;' ) ?>
-    </div>
 </div>
-<div class="form-group">
+
+
+<div class="form-group row">
     <?php echo $this->formLabel($formImage->get('nameImage')); ?>
     <div class="col-sm-4 col-md-4 col-lg-4">
         <?php echo $this->formText($formImage->get('nameImage')); ?>
@@ -26,7 +26,7 @@
         <?php echo (count($formImage->getMessages('nameImage')) > 0 ? $formImage->getMessages('nameImage')['isEmpty'] : '&nbsp;' ) ?>
     </div>
 </div>
-<div class="form-group">
+<div class="form-group row">
     <?php echo $this->formLabel($formImage->get('alt')); ?>
     <div class="col-sm-4 col-md-4 col-lg-4">
         <?php echo $this->formText($formImage->get('alt')); ?>
@@ -35,7 +35,7 @@
         <?php echo (count($formImage->getMessages('alt')) > 0 ? $formImage->getMessages('alt')['isEmpty'] : '&nbsp;' ) ?>
     </div>
 </div>
-<div class="form-group">
+<div class="form-group row">
     <?php echo $this->formLabel($formImage->get('descriptionImage')); ?>
     <div class="col-sm-4 col-md-4 col-lg-4">
         <?php echo $this->formText($formImage->get('descriptionImage')); ?>
