--- a/view/upload-images/partial/upload_image.phtml
+++ b/view/upload-images/partial/upload_image.phtml
@@ -1,10 +1,9 @@
 <!-- Image upload -->
 <hr/>
-<h2>Afbeelden toevoegen</h2>
+<h2>Afbeelding toevoegen</h2>
 <div class="form-group <?php echo (count($formImage->getMessages('image')) > 0 ? 'has-error' : '' ) ?> row">
     <?php echo $this->formLabel($formImage->get('image')); ?>
     <div class="col-sm-4 col-md-4 col-lg-4">
-        
         <div class="has-feedback">
             <div class="input-group">
                 <label class="input-group-addon btn btn-file">
@@ -15,8 +14,6 @@
         </div>
     </div>
 </div>
-
-
 <div class="form-group row">
     <?php echo $this->formLabel($formImage->get('nameImage')); ?>
     <div class="col-sm-4 col-md-4 col-lg-4">
