--- a/view/upload-images/partial/upload_image.phtml
+++ b/view/upload-images/partial/upload_image.phtml
@@ -1,43 +1,44 @@
 <!-- Image upload -->
 <hr/>
 <h2>Afbeelding toevoegen</h2>
-<div class="form-group <?php echo (count($formImage->getMessages('image')) > 0 ? 'has-error' : '' ) ?> row">
+<div class="form-group row mt-3">
     <?php echo $this->formLabel($formImage->get('image')); ?>
-    <div class="col-sm-4 col-md-4 col-lg-4">
-        <div class="has-feedback">
-            <div class="input-group">
-                <label class="input-group-addon btn btn-file">
-                    Browse&hellip; <input type="file" name="image" style="display: none;" multiple>
-                </label>
+    <div class="col-sm-6 col-md-6 col-lg-6">
+            <label class="sr-only" for="inlineFormInputGroup">Username</label>
+            <div class="input-group mb-2">
+                <div class="input-group-prepend input-group-addon">
+                    <label class="input-group-text  btn btn-file">
+                        Browse&hellip; <input type="file" name="image" style="display: none;" multiple>
+                    </label>
+                </div>
                 <input type="text" class="form-control" name="fileUploadFileName" readonly>
             </div>
-        </div>
     </div>
 </div>
 <div class="form-group row">
     <?php echo $this->formLabel($formImage->get('nameImage')); ?>
-    <div class="col-sm-4 col-md-4 col-lg-4">
+    <div class="col-sm-6 col-md-6 col-lg-6">
         <?php echo $this->formText($formImage->get('nameImage')); ?>
     </div>
-    <div class="col-sm-4 col-md-4 col-lg-4">
+    <div class="col-sm-6 col-md-6 col-lg-6">
         <?php echo (count($formImage->getMessages('nameImage')) > 0 ? $formImage->getMessages('nameImage')['isEmpty'] : '&nbsp;' ) ?>
     </div>
 </div>
 <div class="form-group row">
     <?php echo $this->formLabel($formImage->get('alt')); ?>
-    <div class="col-sm-4 col-md-4 col-lg-4">
+    <div class="col-sm-6 col-md-6 col-lg-6">
         <?php echo $this->formText($formImage->get('alt')); ?>
     </div>
-    <div class="col-sm-4 col-md-4 col-lg-4">
+    <div class="col-sm-6 col-md-6 col-lg-6">
         <?php echo (count($formImage->getMessages('alt')) > 0 ? $formImage->getMessages('alt')['isEmpty'] : '&nbsp;' ) ?>
     </div>
 </div>
 <div class="form-group row">
     <?php echo $this->formLabel($formImage->get('descriptionImage')); ?>
-    <div class="col-sm-4 col-md-4 col-lg-4">
+    <div class="col-sm-6 col-md-6 col-lg-6">
         <?php echo $this->formText($formImage->get('descriptionImage')); ?>
     </div>
-    <div class="col-sm-4 col-md-4 col-lg-4">
+    <div class="col-sm-6 col-md-6 col-lg-6">
         <?php echo (count($formImage->getMessages('descriptionImage')) > 0 ? $formImage->getMessages('descriptionImage')['isEmpty'] : '&nbsp;' ) ?>
     </div>
 </div>
