--- a/view/layout/crop.phtml
+++ b/view/layout/crop.phtml
@@ -14,9 +14,9 @@
         <!-- Le styles -->
         <?=
                 $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'])
-                ->prependStylesheet($this->basePath('css/bootstrap-4.0.0/bootstrap.min.css'))
+                    ->prependStylesheet("https://use.fontawesome.com/releases/v5.3.1/css/all.css")
+                    ->prependStylesheet($this->basePath('css/bootstrap-4.0.0/bootstrap.min.css'))
         ?>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
         <!-- Scripts -->
         <?=
