--- a/view/layout/rotate.phtml
+++ b/view/layout/rotate.phtml
@@ -1,43 +1,40 @@
 <?php echo $this->doctype() ?>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <?= $this->headTitle('Verzeilberg')->setSeparator(' - ')->setAutoEscape(false) ?>
+<head>
+    <meta charset="utf-8">
+    <?= $this->headTitle('Verzeilberg')->setSeparator(' - ')->setAutoEscape(false) ?>
 
-        <?=
-                $this->headMeta()
-                ->appendName('viewport', 'width=device-width, initial-scale=1.0')
-                ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
-        ?>
+    <?=
+    $this->headMeta()
+        ->appendName('viewport', 'width=device-width, initial-scale=1.0')
+        ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
+    ?>
 
-        <!-- Le styles -->
-        <?=
-                $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'])
-                ->prependStylesheet($this->basePath('css/style-beheer.css'))
-                ->prependStylesheet($this->basePath('css/bootstrap-theme-custom.css'))
-                ->prependStylesheet($this->basePath('css/bootstrap.min.css'))
-                ->prependStylesheet('https://use.fontawesome.com/releases/v5.0.13/css/all.css')
-        ?>
+    <!-- Le styles -->
+    <?=
+    $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'])
+        ->prependStylesheet("https://use.fontawesome.com/releases/v5.3.1/css/all.css")
+        ->prependStylesheet($this->basePath('css/bootstrap-4.0.0/bootstrap.min.css'))
+    ?>
 
-        <!-- Scripts -->
-        <?=
-                $this->headScript()
-                ->prependFile($this->basePath('js/rotate.js'))
-                ->prependFile($this->basePath('js/custom/beheer.js'))
-                ->prependFile($this->basePath('js/bootstrap.min.js'))
-                ->prependFile($this->basePath('js/jquery-3.1.0.min.js'))
-        ?>
-    </head>
-    <body>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <?= $this->content ?>
-                </div>
-            </div>
+    <!-- Scripts -->
+    <?=
+    $this->headScript()
+        ->prependFile($this->basePath('js/rotate.js'))
+        ->prependFile($this->basePath('js/bootstrap-4.0.0/bootstrap.min.js'))
+        ->prependFile($this->basePath('js/jquery-3.3.1.min.js'))
+    ?>
+</head>
+<body>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <?= $this->content ?>
         </div>
-        <?= $this->inlineScript() ?>
+    </div>
+</div>
+<?= $this->inlineScript() ?>
 
-    </body>
+</body>
 </html>
