--- a/view/upload-images/upload-images/file-check.phtml
+++ b/view/upload-images/upload-images/file-check.phtml
@@ -1,38 +1,58 @@
 <?php
+$this->headTitle('Images');
 $this->mainMenu()->setActiveItemId('imagesbeheer');
+$this->pageBreadcrumbs()->setLayout('beheer');
 $this->pageBreadcrumbs()->setItems([
     'Beheer' => $this->url('beheer'),
     'Images' => $this->url('beheer/images'),
 ]);
 ?>
-<hgroup id="headAdminTitle" class="col-sm-12 col-md-12 col-lg-12">
-    <h1 id="index">IMAGES BEHEER</h1>
-</hgroup>
+<!-- Page Header -->
+<div class="row">
+    <h1 class="col">IMAGES BEHEER</h1>
+</div>
 <!-- Breadcrumbs -->
-<div class="col-lg-12 col-md-12 col-sm-12">
-    <?= $this->pageBreadcrumbs()->render(); ?>
+<div class="row">
+    <div class="col">
+        <?= $this->pageBreadcrumbs()->render(); ?>
+    </div>
 </div>
-<p class="col-lg-12 col-md-12 col-sm-12">
-    <span class="btn btn-default checkDatabaseImages">
-        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Check Database images
+<!-- Page header options -->
+<div class="row mb-3">
+    <div class="col">
+    <span class="btn btn-dark checkDatabaseImages">
+        <i class="fas fa-plus-square"></i> Check Database images
     </span>
-</p>
-<!-- Main Content -->
-<div class="col-lg-12 col-md-12 col-sm-12">
-    <table class="table table-condensed table-bordered table-hover">
-        <tr>
-            <th class="text-center"><input type="checkbox" value="1" name="checkAll" /></th>
-            <th>In database</th>
-            <th>Op server</th>
-        </tr>
-        <?php foreach ($images AS $image) { ?>
-        <tr id="img<?php echo $image->getId(); ?>">
-            <td class="text-center"><input type="checkbox" value="<?php echo $image->getId(); ?>|<?php echo $image->getFolder() . $image->getFileName(); ?>" name="url"  /></td>
-            <td>
-                <?php echo $image->getFolder() . $image->getFileName(); ?>
-            </td>
-            <td class="result"></td>
-        </tr>
-        <?php } ?>
-    </table>
+    </div>
 </div>
+<div class="row">
+    <div class="col">
+        <table class="table table-dark table-sm table-bordered table-hover table-striped">
+            <thead class="thead-dark">
+            <tr>
+                <th class="text-center"><input type="checkbox" value="1" name="checkAll"/></th>
+                <th>In database</th>
+                <th>Op server</th>
+            </tr>
+            </thead>
+            <tbody>
+            <?php foreach ($images AS $image) { ?>
+                <tr id="img<?php echo $image->getId(); ?>">
+                    <td class="text-center"><input type="checkbox"
+                                                   value="<?php echo $image->getId(); ?>|<?php echo $image->getFolder() . $image->getFileName(); ?>"
+                                                   name="url"/></td>
+                    <td>
+                        <?php echo $image->getFolder() . $image->getFileName(); ?>
+                    </td>
+                    <td class="result"></td>
+                </tr>
+            <?php } ?>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<?= $this->paginationControl($images,
+    'Sliding',
+    'layout/paginator',
+    array('route' => 'beheer/images', 'action' => 'fileCheck')); ?>
