--- a/view/upload-images/upload-images/server-check.phtml
+++ b/view/upload-images/upload-images/server-check.phtml
@@ -1,38 +1,59 @@
 <?php
+$this->headTitle('Images');
 $this->mainMenu()->setActiveItemId('imagesbeheer');
+$this->pageBreadcrumbs()->setLayout('beheer');
 $this->pageBreadcrumbs()->setItems([
     'Beheer' => $this->url('beheer'),
     'Images' => $this->url('beheer/images'),
 ]);
 ?>
-<hgroup id="headAdminTitle" class="col-sm-12 col-md-12 col-lg-12">
-    <h1 id="index">IMAGES BEHEER</h1>
-</hgroup>
+<!-- Page Header -->
+<div class="row">
+    <h1 class="col">IMAGES BEHEER</h1>
+</div>
 <!-- Breadcrumbs -->
-<div class="col-lg-12 col-md-12 col-sm-12">
-    <?= $this->pageBreadcrumbs()->render(); ?>
+<div class="row">
+    <div class="col">
+        <?= $this->pageBreadcrumbs()->render(); ?>
+    </div>
 </div>
-<p class="col-lg-12 col-md-12 col-sm-12">
-    <span class="btn btn-default checkImages">
-        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Check images
-    </span>
-</p>
-<!-- Main Content -->
-<div class="col-lg-12 col-md-12 col-sm-12">
-    <table class="table table-condensed table-bordered table-hover">
-        <tr>
-            <th class="text-center"><input type="checkbox" value="1" name="checkAll" /></th>
-            <th>URL</th>
-            <th>In database</th>
-        </tr>
-        <?php foreach ($images AS $index => $image) { ?>
-        <tr id="img<?php echo $index; ?>">
-            <td class="text-center"><input type="checkbox" value="<?php echo $index; ?>|<?php echo $image['url']; ?>" name="url"  /></td>
-            <td>
-                <?php echo $image['url']; ?>
-            </td>
-            <td class="result"></td>
-        </tr>
-        <?php } ?>
-    </table>
+<!-- Page header options -->
+<div class="row mb-3">
+    <div class="col">
+        <span class="btn btn-dark checkImages">
+            <i class="fas fa-plus-square"></i> Check images
+        </span>
+    </div>
 </div>
+<div class="row">
+    <div class="col">
+        <table class="table table-dark table-sm table-bordered table-hover table-striped">
+            <thead class="thead-dark">
+            <tr>
+                <th class="text-center"><input type="checkbox" value="1" name="checkAll"/></th>
+                <th>URL</th>
+                <th>In database</th>
+            </tr>
+            </thead>
+            <tbody>
+            <?php foreach ($images AS $index => $image) { ?>
+                <tr id="img<?php echo $index; ?>">
+                    <td class="text-center"><input type="checkbox"
+                                                   value="<?php echo $index; ?>|<?php echo $image['url']; ?>"
+                                                   name="url"/>
+                    </td>
+                    <td>
+                        <?php echo $image['url']; ?>
+                    </td>
+                    <td class="result"></td>
+                </tr>
+            <?php } ?>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<!-- Event form -->
+<?php
+echo $this->partial('upload-images/partial/paginator.phtml', array('paginationSettings' => $paginationSettings, 'route' => ['route' => 'beheer/images', 'action' => 'serverCheck']));
+?>
