Added cancel button

--- a/view/upload-images/upload-images/file-check.phtml
+++ b/view/upload-images/upload-images/file-check.phtml
@@ -19,10 +19,15 @@ $this->pageBreadcrumbs()->setItems([
 </div>
 <!-- Page header options -->
 <div class="row mb-3">
-    <div class="col">
+    <div class="col-md-auto">
     <span class="btn btn-dark checkDatabaseImages">
         <i class="fas fa-plus-square"></i> Check Database images
     </span>
+    </div>
+    <div class="col">
+    <button class="btn btn-danger disable" id="break" disabled="disable">
+        <i class="fas fa-plus-square"></i> Cancel
+    </button>
     </div>
 </div>
 <div class="row">
