--- a/view/upload-images/partial/upload_image.phtml
+++ b/view/upload-images/partial/upload_image.phtml
@@ -1,13 +1,13 @@
 <!-- Image upload -->
 <hr/>
 <h2>Afbeelding toevoegen</h2>
-<div class="form-group row mt-3">
+<div class="form-group row mt-3 mb-3">
     <?php echo $this->formLabel($formImage->get('image')); ?>
     <div class="col-sm-6 col-md-6 col-lg-6">
             <label class="sr-only" for="inlineFormInputGroup">Username</label>
             <div class="input-group mb-2">
                 <div class="input-group-prepend input-group-addon">
-                    <label class="input-group-text  btn btn-file">
+                    <label class="input-group-text  btn btn-primary btn-file">
                         Browse&hellip; <input type="file" name="image" style="display: none;" multiple>
                     </label>
                 </div>
