--- a/view/upload-images/upload-images/server-check.phtml
+++ b/view/upload-images/upload-images/server-check.phtml
@@ -1,59 +1,70 @@
-<?php
-$this->headTitle('Images');
-$this->mainMenu()->setActiveItemId('imagesbeheer');
-$this->pageBreadcrumbs()->setLayout('beheer');
-$this->pageBreadcrumbs()->setItems([
-    'Beheer' => $this->url('beheer'),
-    'Images' => $this->url('beheer/images'),
-]);
-?>
-<!-- Page Header -->
-<div class="row">
-    <h1 class="col">IMAGES BEHEER</h1>
-</div>
-<!-- Breadcrumbs -->
-<div class="row">
-    <div class="col">
-        <?= $this->pageBreadcrumbs()->render(); ?>
+<div class="container-fluid pt-4 px-4">
+    <div class="row g-4">
+        <div class="col-sm-12 col-md-12 col-xl-12">
+            <div class="bg-secondary rounded  p-4">
+                <div class="row g-4">
+                    <h2 class="col-sm-12 col-md-12 col-xl-12 mb-4 text-primary">Images: server check</h2>
+                </div>
+                <!-- Breadcrumbs -->
+                <div class="row">
+                    <div class="col">
+                        <?= $this->pageBreadcrumbs()->render(); ?>
+                    </div>
+                </div>
+                <!-- Page header options -->
+                <div class="row mb-3">
+                    <div class="col-md-auto">
+                        <span class="btn btn-primary checkImages">
+                            <i class="fas fa-plus-square"></i> Check images
+                        </span>
+                    </div>
+                    <div class="col">
+                        <button class="btn btn-danger disable" id="break" disabled="disable">
+                            <i class="fas fa-plus-square"></i> Cancel
+                        </button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <table class="table table-sm table-bordered table-hover table-striped">
+                            <thead>
+                            <tr>
+                                <th class="text-center"><input type="checkbox" value="1" name="checkAll"/></th>
+                                <th>URL</th>
+                                <th>In database</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <?php foreach ($images as $index => $image) { ?>
+                                <tr id="img<?php echo $index; ?>">
+                                    <td class="text-center"><input type="checkbox"
+                                                                   value="<?php echo $index; ?>|<?php echo $image['url']; ?>"
+                                                                   name="url"/>
+                                    </td>
+                                    <td>
+                                        <?php echo $image['url']; ?>
+                                    </td>
+                                    <td class="result"></td>
+                                </tr>
+                            <?php } ?>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-<!-- Page header options -->
-<div class="row mb-3">
-    <div class="col">
-        <span class="btn btn-dark checkImages">
-            <i class="fas fa-plus-square"></i> Check images
-        </span>
-    </div>
-</div>
-<div class="row">
-    <div class="col">
-        <table class="table table-dark table-sm table-bordered table-hover table-striped">
-            <thead class="thead-dark">
-            <tr>
-                <th class="text-center"><input type="checkbox" value="1" name="checkAll"/></th>
-                <th>URL</th>
-                <th>In database</th>
-            </tr>
-            </thead>
-            <tbody>
-            <?php foreach ($images AS $index => $image) { ?>
-                <tr id="img<?php echo $index; ?>">
-                    <td class="text-center"><input type="checkbox"
-                                                   value="<?php echo $index; ?>|<?php echo $image['url']; ?>"
-                                                   name="url"/>
-                    </td>
-                    <td>
-                        <?php echo $image['url']; ?>
-                    </td>
-                    <td class="result"></td>
-                </tr>
-            <?php } ?>
-            </tbody>
-        </table>
-    </div>
-</div>
 
-<!-- Event form -->
-<?php
-echo $this->partial('upload-images/partial/paginator.phtml', array('paginationSettings' => $paginationSettings, 'route' => ['route' => 'beheer/images', 'action' => 'serverCheck']));
-?>
+    <div class="row g-4">
+        <div class="col-sm-12 col-md-12 col-xl-12">
+            <div class="bg-secondary rounded  mt-4 p-4">
+                <?php
+                echo $this->partial('upload-images/partial/pagination.phtml', [
+                    'pagination' => $pagination,
+                    'route' => ['route' => 'beheer/images', 'action' => 'server-check']
+                ]);
+                ?>
+            </div>
+        </div>
+    </div>
+</div>
