--- a/view/upload-images/upload-images/file-check.phtml
+++ b/view/upload-images/upload-images/file-check.phtml
@@ -1,68 +1,54 @@
-<div class="container-fluid pt-4 px-4">
+<div id="file-check" class="container-fluid pt-4 px-4">
     <div class="row g-4">
         <div class="col-sm-12 col-md-12 col-xl-12">
             <div class="bg-secondary rounded  p-4">
                 <div class="row g-4">
                     <h2 class="col-sm-12 col-md-12 col-xl-12 mb-4 text-primary">Images: file check</h2>
+                    <p>Hier kunt u controleren welke afbeeldingen er in de database voorkomen maar niet op de
+                        server.</p>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-md-auto">
-                        <span class="btn btn-primary checkDatabaseImages">
-                            <i class="fas fa-plus-square"></i> Check Database images
-                        </span>
-                    </div>
-                    <div class="col-md-auto">
-                        <span class="btn btn-primary checkAllDatabaseImages">
-                            <i class="fas fa-plus-square"></i> Check All Database images
-                        </span>
-                    </div>
                     <div class="col">
-                        <button class="btn btn-danger disable" id="break" disabled="disable">
-                            <i class="fas fa-plus-square"></i> Cancel
-                        </button>
+                        <button id="deleteSelectedImagesFromDatabase" class="btn btn-primary deleteSelectedImages"
+                                disabled="disable"><i
+                                    class="fas fa-trash-alt"></i></button>
+                    </div>
+                    <div class="col text-end">
+                        <button id="startImageScan" class="btn btn-primary"><i class="fas fa-play"></i></button>
+                        <button id="cancelImageScan" class="btn btn-primary" disabled="disable"><i
+                                    class="fas fa-window-close"></i></button>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <table class="table table-sm table-bordered table-hover table-striped">
-                            <thead>
-                            <tr>
-                                <th class="text-center"><input type="checkbox" value="1" name="checkAll"/></th>
-                                <th>In database</th>
-                                <th>Op server</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <?php foreach ($images as $image) { ?>
-                                <tr id="img<?php echo $image->getId(); ?>">
-                                    <td class="text-center"><input type="checkbox"
-                                                                   value="<?php echo $image->getId(); ?>|<?php echo $image->getFolder() . $image->getFileName(); ?>"
-                                                                   name="url"/></td>
-                                    <td>
-                                        <?php echo $image->getFolder() . $image->getFileName(); ?>
-                                    </td>
-                                    <td class="result"></td>
-                                </tr>
-                            <?php } ?>
-                            </tbody>
-                        </table>
+                        <h4 class="mt-4 text-primary">Progress</h4>
+                        <div id="progressBar" class="progress" role="progressbar" aria-label="Basic example"
+                             aria-valuenow="25"
+                             aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar bg-success notransition"></div>
+                        </div>
+                        <div id="image-results-table" class="container-fluid mt-3">
+                            <div id="image-result-body-placeholder">
+                                <table id="image-result-body" class="table table-sm table-bordered table-hover display">
+                                    <thead>
+                                    <tr>
+                                        <th>
+                                            <input type='checkbox'
+                                                   name='delete-all-images'
+                                                   id="delete-all-image"/>
+                                        </th>
+                                        <th>Id</th>
+                                        <th>Name</th>
+                                        <th>Folder</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row g-4">
-        <div class="col-sm-12 col-md-12 col-xl-12">
-            <div class="bg-secondary rounded  mt-4 p-4">
-                <?= $this->paginationControl($images,
-                    'Sliding',
-                    'layout/paginator',
-                    array('route' => 'beheer/images', 'action' => 'fileCheck')); ?>
-            </div>
-        </div>
-    </div>
 </div>
-
-<?php
-echo $this->partial('upload-images/partial/progress_images.phtml');
-?>
